cud WfespPluginConf, unit test, swagger
