# src/main/java/it/pagopa/pagopa/apiconfig/controller/ConfigurationController.java
@@ -105,7 +105,7 @@ public class ConfigurationController {
      */
     @Operation(summary = "Update configuration key", security = {@SecurityRequirement(name = "ApiKey"), @SecurityRequirement(name = "Authorization")}, tags = {"Configuration"})
     @ApiResponses(value = {
-            @ApiResponse(responseCode = "201", description = "Created", content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE, schema = @Schema(implementation = ConfigurationKey.class))),
+            @ApiResponse(responseCode = "200", description = "OK", content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE, schema = @Schema(implementation = ConfigurationKey.class))),
             @ApiResponse(responseCode = "400", description = "Bad Request", content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE, schema = @Schema(implementation = ProblemJson.class))),
             @ApiResponse(responseCode = "401", description = "Unauthorized", content = @Content(schema = @Schema())),
             @ApiResponse(responseCode = "403", description = "Forbidden", content = @Content(schema = @Schema())),
@@ -159,7 +159,28 @@ public class ConfigurationController {
             @ApiResponse(responseCode = "500", description = "Service unavailable", content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE, schema = @Schema(implementation = ProblemJson.class)))})
     @GetMapping(value = "/wfespplugins", produces = {MediaType.APPLICATION_JSON_VALUE})
     public ResponseEntity<WfespPluginConfs> getWfespPlugins() {
-        return ResponseEntity.ok(configurationService.getWfespPluginConfigurationList());
+        return ResponseEntity.ok(configurationService.getWfespPluginConfigurations());
+    }
+
+    /**
+     * POST /configuration/wfespplugins : Create a WFESP Plugin configuration
+     *
+     * @return OK. (status code 200)
+     * or Service unavailable (status code 500)
+     */
+    @Operation(summary = "Create configuration key", security = {@SecurityRequirement(name = "ApiKey"), @SecurityRequirement(name = "Authorization")}, tags = {"Configuration"})
+    @ApiResponses(value = {
+            @ApiResponse(responseCode = "201", description = "Created", content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE, schema = @Schema(implementation = ConfigurationKey.class))),
+            @ApiResponse(responseCode = "400", description = "Bad Request", content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE, schema = @Schema(implementation = ProblemJson.class))),
+            @ApiResponse(responseCode = "401", description = "Unauthorized", content = @Content(schema = @Schema())),
+            @ApiResponse(responseCode = "403", description = "Forbidden", content = @Content(schema = @Schema())),
+            @ApiResponse(responseCode = "409", description = "Conflict", content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE, schema = @Schema(implementation = ProblemJson.class))),
+            @ApiResponse(responseCode = "429", description = "Too many requests", content = @Content(schema = @Schema())),
+            @ApiResponse(responseCode = "500", description = "Service unavailable", content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE, schema = @Schema(implementation = ProblemJson.class)))})
+    @PostMapping(value = "/wfespplugins", produces = {MediaType.APPLICATION_JSON_VALUE})
+    public ResponseEntity<WfespPluginConf> createWfespPlugin(@RequestBody @Valid @NotNull WfespPluginConf wfespPluginConf) {
+        WfespPluginConf result = configurationService.createWfespPluginConfiguration(wfespPluginConf);
+        return ResponseEntity.status(HttpStatus.CREATED).body(result);
     }
 
     /**
@@ -182,4 +203,47 @@ public class ConfigurationController {
         return ResponseEntity.ok(configurationService.getWfespPluginConfiguration(idServPlugin));
     }
 
+    /**
+     * PUT /configuration/wfespplugins/idServPlugin : Update a Wfesp plugin configuration
+     *
+     * @param idServPlugin idServPlugin (required)
+     * @return OK. (status code 200)
+     * or Service unavailable (status code 500)
+     */
+    @Operation(summary = "Update Wfesp plugin configuration", security = {@SecurityRequirement(name = "ApiKey"), @SecurityRequirement(name = "Authorization")}, tags = {"Configuration"})
+    @ApiResponses(value = {
+    @ApiResponse(responseCode = "200", description = "OK", content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE, schema = @Schema(implementation = WfespPluginConf.class))),
+    @ApiResponse(responseCode = "400", description = "Bad Request", content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE, schema = @Schema(implementation = ProblemJson.class))),
+    @ApiResponse(responseCode = "401", description = "Unauthorized", content = @Content(schema = @Schema())),
+    @ApiResponse(responseCode = "403", description = "Forbidden", content = @Content(schema = @Schema())),
+    @ApiResponse(responseCode = "409", description = "Conflict", content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE, schema = @Schema(implementation = ProblemJson.class))),
+    @ApiResponse(responseCode = "429", description = "Too many requests", content = @Content(schema = @Schema())),
+    @ApiResponse(responseCode = "500", description = "Service unavailable", content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE, schema = @Schema(implementation = ProblemJson.class)))})
+    @PutMapping(value = "/wfespplugins/{idServPlugin}", produces = {MediaType.APPLICATION_JSON_VALUE})
+    public ResponseEntity<WfespPluginConf> updateWfespPlugin(@Parameter(description = "idServPlugin") @PathVariable("idServPlugin") String idServPlugin,
+                                                             @RequestBody @Valid @NotNull WfespPluginConf wfespPluginConf) {
+        WfespPluginConf wp = configurationService.updateWfespPluginConfiguration(idServPlugin, wfespPluginConf);
+        return ResponseEntity.ok(wp);
+    }
+
+    /**
+     * DELETE /configuration/wfespplugins/idServPlugin : Delete a Wfesp plugin configuration
+     *
+     * @param idServPlugin idServPlugin (required)
+     * @return
+     */
+    @Operation(summary = "Delete configuration key", security = {@SecurityRequirement(name = "ApiKey"), @SecurityRequirement(name = "Authorization")}, tags = {"Configuration"})
+    @ApiResponses(value = {
+    @ApiResponse(responseCode = "200", description = "OK", content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE, schema = @Schema())),
+    @ApiResponse(responseCode = "400", description = "Bad Request", content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE, schema = @Schema(implementation = ProblemJson.class))),
+    @ApiResponse(responseCode = "401", description = "Unauthorized", content = @Content(schema = @Schema())),
+    @ApiResponse(responseCode = "403", description = "Forbidden", content = @Content(schema = @Schema())),
+    @ApiResponse(responseCode = "404", description = "Not Found", content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE, schema = @Schema(implementation = ProblemJson.class))),
+    @ApiResponse(responseCode = "429", description = "Too many requests", content = @Content(schema = @Schema())),
+    @ApiResponse(responseCode = "500", description = "Service unavailable", content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE, schema = @Schema(implementation = ProblemJson.class)))})
+    @DeleteMapping(value = "/wfespplugins/{idServPlugin}", produces = {MediaType.APPLICATION_JSON_VALUE})
+    public ResponseEntity<Void> deleteWfespPlugin(@Parameter(description = "idServPlugin") @PathVariable("idServPlugin") String idServPlugin) {
+        configurationService.deleteWfespPluginConfiguration(idServPlugin);
+        return ResponseEntity.ok().build();
+    }
 }
